Terminado la sección de sobre mi

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container text-white text-center">
+        <div class="container text-white text-center sm-title-pri">
             <h1 class="sm-title">Hola soy André. Y soy desarrollador.</h1>
             <div class="sm-social">
                 <a href=""><i class="fab fa-github"></i></a>
@@ -49,38 +49,84 @@
             </div>
         </div>
     </div>
-    <section class="aboutme container-fluid text-center">
-        <h2 id="sobremi">Me presento mi nombre es André Ibarra Pérez</h2>
-        <h4 id="descripcion">
-            Soy un desarrollador de software con experiencia, he trabajado con proyectos para la universidad y algunos otros proyectos personales, en gran parte de estos como lider del proyecto. Soy una persona con liderazgo, ganas de superarse, muy autodidacta,
-            responsable y un apasionado a dar soluciones programando.
-        </h4>
-        <div class="sm-card">
-            <div class="row justify-content-center">
-                <div class="card col-sm-12 col-md-4" style="width: 18rem;">
-                    <img src="" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <section class="aboutme">
+        <div class="aboutme-up">
+            <div class="container-fluid text-center">
+                <h2 id="sobremi">Me presento mi nombre es André Ibarra Pérez</h2>
+                <h4 id="descripcion">
+                    Soy un desarrollador de software con experiencia, he trabajado con proyectos para la universidad y algunos otros proyectos personales, en gran parte de estos como lider del proyecto. Soy una persona con liderazgo, ganas de superarse, muy autodidacta,
+                    responsable y un apasionado a dar soluciones programando.
+                </h4>
+            </div>
+        </div>
+        <div class="aboutme-down">
+            <div class="sm-card container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-12 col-md-4 mt-sm-4 mt-md-0">
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-body">
+                                <div class="sm-card-title">
+                                    <i class="fas fa-pencil-ruler card-image"></i>
+                                    <h5 class="card-title">Habilidades personales</h5>
+                                    <h6 class="card-subtitle">Soy una persona con iniciativa y motivación y responsabilidad para poder solucionar cualquier problema.</h6>
+                                </div>
+                                <h6 class="card-title">Habilidades:</h6>
+                                <h6 class="card-subtitle">Autodidacta</h6>
+                                <h6 class="card-subtitle">Proactivo</h6>
+                                <h6 class="card-subtitle">Autonomía</h6>
+                                <h6 class="card-subtitle">Trabajo en equipo</h6>
+                                <h6 class="card-subtitle">Liderazgo</h6>
+                                <h6 class="card-subtitle">Trabajo bajo presión</h6>
+                                <h6 class="card-subtitle">Resolución de problemas</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="card col-sm-12 col-md-4" style="width: 18rem;">
-                    <img src="" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="col-sm-12 col-md-4 mt-sm-4 mt-md-0">
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-body">
+                                <div class="sm-card-title">
+                                    <i class="fas fa-file-code card-image"></i>
+                                    <h5 class="card-title">Desarrollador</h5>
+                                    <h6 class="card-subtitle">Me especializo en el desarrollo Fullstack, tengo buen manejo con los lenguajes de programación, las bases de datos y el diseño.</h6>
+                                </div>
+                                <h6 class="card-title">Lenguajes:</h6>
+                                <h6 class="card-subtitle">Typescript</h6>
+                                <h6 class="card-subtitle">HTML</h6>
+                                <h6 class="card-subtitle">C#</h6>
+                                <h6 class="card-subtitle">Java</h6>
+                                <h6 class="card-subtitle">Javascript</h6>
+                                <h6 class="card-subtitle">PHP</h6>
+                                <h6 class="card-subtitle">MySQL</h6>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="card col-sm-12 col-md-4 " style="width: 18rem;">
-                    <img src="" alt="">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="col-sm-12 col-md-4 mt-sm-4 mt-md-0">
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="card-body">
+                                <div class="sm-card-title">
+                                    <i class="fas fa-brain card-image"></i>
+                                    <h5 class="card-title">Experiencia</h5>
+                                    <h6 class="card-subtitle">Tengo experiencia en el desarrollo de aplicaciones móviles, web y de software de aplicación utilizando distintas tecnologías.</h6>
+                                </div>
+                                <h6 class="card-title">Tecnologías:</h6>
+                                <h6 class="card-subtitle">Angular</h6>
+                                <h6 class="card-subtitle">Ionic</h6>
+                                <h6 class="card-subtitle">Bootstrap</h6>
+                                <h6 class="card-subtitle">Microsoft .NET</h6>
+                                <h6 class="card-subtitle">Firebase</h6>
+                                <h6 class="card-subtitle">Photoshop</h6>
+                                <h6 class="card-subtitle">Adobe XD</h6>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <section class="sm-proyectos"></section>
     <footer>
 
     </footer>
