Diseño editado landpage y responsive

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 </head>
 
 <body>
-    <img src="/img/svg/left.svg" id="left">
-    <img src="/img/svg/right.svg" id="right">
-    <div id="inicio" class="background">
+    <!-- <img src="/img/svg/left.svg" id="left">
+    <img src="/img/svg/right.svg" id="right"> -->
+
+    <div id="inicio" class="background back" style="height: 100vh;">
+        <!-- <span>
+            <img src="img/a.svg" class="back">
+        </span> -->
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid sm-nav">
-                <img class="logo-navbar-mobile navbar-brand" src="img/logoAzul.png" alt="">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <a class="fas fa-bars text-white"></a>
+                <img class="logo-navbar-mobile navbar-brand" src="img/logoAzul1.png" alt="" style="width: 15em;">
+                <button class="navbar-toggler sm-navbar" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                <a class="fas fa-bars"></a>
             </button>
                 <div class="collapse navbar-collapse sm-nav-ul" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto text-white">
@@ -38,14 +42,14 @@
                 </div>
             </div>
         </nav>
-        <div class="container text-white text-center sm-title-pri">
+        <div class="container-fluid sm-title-pri">
             <h1 class="sm-title">Hola soy André. Y soy desarrollador.</h1>
-            <div class="sm-social">
-                <a href="https://drive.google.com/open?id=1zUZ3BXNsAYV5FyCSxcncWVVTsC9bo9mo" target="_blank"><i class="far fa-file"></i></a>
-                <a href="https://github.com/muskops" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/sk8muski/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://www.instagram.com/muskops/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <div class="sm-social mob-sm-social">
+                <a class="mob-sm-social" href="https://drive.google.com/open?id=1zUZ3BXNsAYV5FyCSxcncWVVTsC9bo9mo" target="_blank"><i class="far fa-file"></i></a>
+                <a class="mob-sm-social" href="https://github.com/muskops" target="_blank"><i class="fab fa-github"></i></a>
+                <a class="mob-sm-social" href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a class="mob-sm-social" href="https://www.facebook.com/sk8muski/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="mob-sm-social" href="https://www.youtube.com/user/Raseclon" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
     </div>
@@ -53,6 +57,7 @@
         <div class="aboutme-up">
             <div class="container-fluid text-center">
                 <h2 id="sobremi">Me presento mi nombre es André Ibarra Pérez</h2>
+                <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60%;">
                 <h4 id="descripcion" class="text-justify">
                     Soy un desarrollador de software con experiencia, he trabajado con proyectos para la universidad y algunos otros proyectos personales, en gran parte de estos como lider del proyecto. Soy una persona con liderazgo, ganas de superarse, muy autodidacta,
                     responsable y un apasionado a dar soluciones programando.
@@ -251,7 +256,7 @@
 
 <footer class="page-footer font-small unique-color-dark">
 
-    <div style="background-color: rgb(23, 106, 159);">
+    <div style="background-color: rgb(29, 112, 189);">
         <div class="container">
             <div class="row py-4 d-flex align-items-center">
                 <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
@@ -262,7 +267,7 @@
                     <a href="https://github.com/muskops" target="_blank"><i class="fab fa-github text-white mr-4"></i></a>
                     <a href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin text-white mr-4"></i></a>
                     <a href="https://www.facebook.com/sk8muski/" target="_blank"><i class="fab fa-facebook-f text-white mr-4"></i></a>
-                    <a href="https://www.instagram.com/muskops/" target="_blank"><i class="fab fa-instagram text-white mr-4"></i></a>
+                    <a href="https://www.youtube.com/user/Raseclon" target="_blank"><i class="fab fa-youtube text-white mr-4"></i></a>
 
                 </div>
             </div>
@@ -272,7 +277,7 @@
     <div class="container text-center text-md-left mt-5">
         <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                <h6 class="text-uppercase font-weight-bold">Sk8Muski</h6>
+                <h6 class="text-uppercase font-weight-bold">André Ibarra Pérez</h6>
                 <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p class="text-justify">
                     Desarrollador entusiasmado por programar aplicando todos los conocimientos que he obtenido a lo largo de mi carrera Ingeniero en Sistemas Computacionales.
