Agregado de boton flotante y ultimos detalles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- <img src="/img/svg/left.svg" id="left">
     <img src="/img/svg/right.svg" id="right"> -->
-
+    <a class="sm-btn" href="#inicio"><i class="fas fa-arrow-up text-white sm-btn-interior"></i></a>
     <div id="inicio" class="background back" style="height: 100vh;">
         <!-- <span>
             <img src="img/a.svg" class="back">
@@ -27,16 +27,16 @@
                 <div class="collapse navbar-collapse sm-nav-ul" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto text-white">
                         <li class="nav-item active sm-nav-ul-li">
-                            <a class="nav-link" href="#">Inicio</a>
+                            <a class="nav-link" href="#inicio">Inicio</a>
                         </li>
                         <li class="nav-item sm-nav-ul-li">
-                            <a class="nav-link" href="#">Yo</a>
+                            <a class="nav-link" href="#sobremi">Yo</a>
                         </li>
                         <li class="nav-item sm-nav-ul-li">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="#proyectos">Proyectos</a>
                         </li>
                         <li class="nav-item sm-nav-ul-li">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
         <div class="container-fluid sm-title-pri">
             <h1 class="sm-title">Hola soy André. Y soy desarrollador.</h1>
             <div class="sm-social mob-sm-social">
-                <a class="mob-sm-social" href="https://drive.google.com/open?id=1zUZ3BXNsAYV5FyCSxcncWVVTsC9bo9mo" target="_blank"><i class="far fa-file"></i></a>
+                <a class="mob-sm-social" href="https://drive.google.com/file/d/1hXSrsoEjYqjK4Mi0wbeAyWmqa9QZznIc/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
                 <a class="mob-sm-social" href="https://github.com/muskops" target="_blank"><i class="fab fa-github"></i></a>
                 <a class="mob-sm-social" href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a class="mob-sm-social" href="https://www.facebook.com/sk8muski/" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -182,7 +182,7 @@
                             <p class="text-justify">Página web enfocada a estudiantes para calificar y puntuar a los maestros del Tecnológico de El Mante, desarrollada con HTML, CSS y PHP.
                             </p>
                             <div>
-                                <a href="https://github.com/iTzFiliSalsa/CosasDelTecMante" target="_blank"><i class="fas fa-file-code"></i></a>
+                                <a style="padding-right: 20px;" href="https://github.com/iTzFiliSalsa/CosasDelTecMante" target="_blank"><i class="fas fa-file-code"></i></a>
                                 <a href="http://cosasdeltecmante.com/" target="_blank"><i class="fas fa-globe"></i></a>
                             </div>
                         </div>
@@ -254,7 +254,7 @@
     <script src="js/bootstrap.min.js"></script>
 </body>
 
-<footer class="page-footer font-small unique-color-dark">
+<footer id="contact" class="page-footer font-small unique-color-dark">
 
     <div style="background-color: rgb(29, 112, 189);">
         <div class="container">
@@ -263,7 +263,7 @@
                     <h6 class="mb-0 text-white">Encuentrame en mis redes sociales!</h6>
                 </div>
                 <div class="col-md-6 col-lg-7 text-center text-md-right sm-footer-social">
-                    <a href="https://drive.google.com/open?id=1zUZ3BXNsAYV5FyCSxcncWVVTsC9bo9mo" target="_blank"><i class="far fa-file text-white mr-4"> </i></a>
+                    <a href="https://drive.google.com/file/d/1hXSrsoEjYqjK4Mi0wbeAyWmqa9QZznIc/view?usp=sharing" target="_blank"><i class="far fa-file text-white mr-4"> </i></a>
                     <a href="https://github.com/muskops" target="_blank"><i class="fab fa-github text-white mr-4"></i></a>
                     <a href="https://www.linkedin.com/in/ibarraandre/" target="_blank"><i class="fab fa-linkedin text-white mr-4"></i></a>
                     <a href="https://www.facebook.com/sk8muski/" target="_blank"><i class="fab fa-facebook-f text-white mr-4"></i></a>
@@ -342,7 +342,7 @@
                     <i class="fas fa-phone mr-3"></i> + 52 831 113 1562</p>
                 <p>
                     <i class="far fa-file mr-4"></i>
-                    <a href="https://drive.google.com/open?id=1zUZ3BXNsAYV5FyCSxcncWVVTsC9bo9mo" target="_blank"> Curriculum vitae</a>
+                    <a href="https://drive.google.com/file/d/1hXSrsoEjYqjK4Mi0wbeAyWmqa9QZznIc/view?usp=sharing" target="_blank"> Curriculum vitae</a>
                 </p>
             </div>
         </div>
