--- a/index.html
+++ b/index.html
@@ -254,6 +254,93 @@
         </div>
     </section>
 
+    <section id="logros" class="sm-logros">
+        <div class="sm-logros-title">
+            <h1 class="text-center ">Mis logros, reconocimientos y cursos</h1>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 200px;">
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-30 border" src="img/logros/reconocimientotec.png" alt="Reconocimiento ITSM">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciatamcoder.jpg" alt="Reconocimiento CBTis 15">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-30 border" src="img/logros/reconocimientocodingcup.png" alt="Reconocimiento CBTis 15">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-30 border" src="img/logros/reconocimientocbtis.png" alt="Reconocimiento CBTis 15">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/acreditacionms.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciahbuild1.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciahbuild.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciainglesparatodos.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/certificadoAngular5.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/certificadohtml.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/certificadosqludemy.png" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/congreso.jpg" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciaofimatica.jpg" alt="Acreditación Microsoft">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/hourcode.png" alt="Acreditación Microsoft">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon sm-icon" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon sm-icon" aria-hidden="true"><i class="fas fa-chevron-right"></i></span>
+                <span class="sr-only">Next</span>
+            </a>
+    </section>
+
+    <section id="cv" class="sm-cv">
+        <div class="sm-cv-title">
+            <h1 class="text-center ">Mi Curriculum Vitae</h1>
+            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 200px;">
+        </div>
+        <div class="center-cv">
+            <embed src="img/cv/cv.pdf" width="1000" height="1200" frameborder="1" class="sm-embed">
+        </div>
+
+    </section>
+
     <script src="js/scripts.js"></script>
     <script src="js/jquery-3.4.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
