Agregado de proyecto, y fix de algunos errores

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
                             </p>
                             <div class="flex-row">
                                 <a style="padding-right: 20px;" href="https://github.com/muskops/SASPREDesktop" target="_blank"><i class="fas fa-file-code"></i></a>
-                                <a href="http://saspre.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a style="padding-right: 20px;" href="http://saspre.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a href="https://www.youtube.com/watch?v=RVfsT8f-Lig" target="_blank"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +165,8 @@
                             </p>
                             <div class="flex-row">
                                 <a style="padding-right: 20px;" href="https://github.com/muskops/SASPREMobile" target="_blank"><i class="fas fa-file-code"></i></a>
-                                <a href="http://saspre.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a style="padding-right: 20px;" href="http://saspre.com/" target="_blank"><i class="fas fa-globe"></i></a>
+                                <a href="https://www.youtube.com/watch?v=RVfsT8f-Lig" target="_blank"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
@@ -196,6 +198,17 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
                     <div class="sm-col">
+                        <img class="sm-image" src="/img/proyectos/covidpreviene1.png" alt="Covid Previene">
+                        <div class="sm-description">
+                            <h6 style="font-size: 2em;">Covid Previene 19</h6>
+                            <p class="text-justify">App para visitantes de establecimientos que pronostica los tiempos de menor concurrencia, minimizando el riesgo de exposición al SARS-CoV-2, utilizando Ionic, Google Maps API y BestTime.app.
+                            </p>
+                            <a href="https://github.com/muskops/covid-previene-19" target="_blank"><i class="fas fa-file-code"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
+                    <div class="sm-col">
                         <img class="sm-image" src="/img/proyectos/talent.png" alt="Talent Top">
                         <div class="sm-description">
                             <h6>Talent Top</h6>
@@ -216,15 +229,14 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
                     <div class="sm-col">
-                        <img class="sm-image" src="/img/proyectos/encud.png" alt="Encud">
+                        <img class="sm-image" src="/img/proyectos/adamant.png" alt="Adamant">
                         <div class="sm-description">
-                            <h6>Encud</h6>
-                            <p class="text-justify">Aplicación móvil realizar encuestas por parte del sector salud de la región, desarrollada primeramente en Android con Room y despues transferida a Ionic con web services PHP.</p>
-                            <a href="https://github.com/XSAS-Community/Encud" target="_blank"><i class="fas fa-file-code"></i></a>
+                            <h6>Adamant</h6>
+                            <p class="text-justify">Compilador capaz de realizar operaciones matemáticas básicas y mostrar resultados basado en C# pero traducido a español, desarrollado en C# con ayuda de la librería Irony.
+                            </p>
+                            <a href="https://github.com/muskops/ADAMANT" target="_blank"><i class="fas fa-file-code"></i></a>
                         </div>
                     </div>
                 </div>
@@ -241,12 +253,11 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
                     <div class="sm-col">
-                        <img class="sm-image" src="/img/proyectos/adamant.png" alt="Adamant">
+                        <img class="sm-image" src="/img/proyectos/encud.png" alt="Encud">
                         <div class="sm-description">
-                            <h6>Adamant</h6>
-                            <p class="text-justify">Compilador capaz de realizar operaciones matemáticas básicas y mostrar resultados basado en C# pero traducido a español, desarrollado en C# con ayuda de la librería Irony.
-                            </p>
-                            <a href="https://github.com/muskops/ADAMANT" target="_blank"><i class="fas fa-file-code"></i></a>
+                            <h6>Encud</h6>
+                            <p class="text-justify">Aplicación móvil realizar encuestas por parte del sector salud de la región, desarrollada primeramente en Android con Room y despues transferida a Ionic con web services PHP.</p>
+                            <a href="https://github.com/XSAS-Community/Encud" target="_blank"><i class="fas fa-file-code"></i></a>
                         </div>
                     </div>
                 </div>
@@ -338,7 +349,6 @@
         <div class="center-cv">
             <embed src="img/cv/cv.pdf" width="1000" height="1200" frameborder="1" class="sm-embed">
         </div>
-
     </section>
 
     <script src="js/scripts.js"></script>
@@ -390,7 +400,12 @@
                 <p>
                     <a href="#proyectos">Mis proyectos</a>
                 </p>
-
+                <p>
+                    <a href="#logros">Mis logros</a>
+                </p>
+                <p>
+                    <a href="#cv">Mi CV</a>
+                </p>
             </div>
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 sm-footer-proyectos">
@@ -407,6 +422,9 @@
                 </p>
                 <p>
                     <a href="http://cosasdeltecmante.com/" target="_blank">Cosas del Tec Mante</a>
+                </p>
+                <p>
+                    <a href="https://github.com/muskops/covid-previene-19" target="_blank">Covid Previene 19</a>
                 </p>
                 <p>
                     <a href="https://github.com/Joaquin4562/talent_top" target="_blank">Talent Top</a>
@@ -440,7 +458,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright text-center py-3">© 2020 Copyright: André Ibarra Pérez
+    <div class="footer-copyright text-center py-1">© 2020 Copyright: André Ibarra Pérez
     </div>
 
 </footer>
