Fix de algunos errores

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
                         <img class="sm-image" src="/img/proyectos/covidpreviene1.png" alt="Covid Previene">
                         <div class="sm-description">
                             <h6 style="font-size: 2em;">Covid Previene 19</h6>
-                            <p class="text-justify">App para visitantes de establecimientos que pronostica los tiempos de menor concurrencia, minimizando el riesgo de exposición al SARS-CoV-2, utilizando Ionic, Google Maps API y BestTime.app.
+                            <p class="text-justify">App realizada en verano de investigacion 2020 en el ITESM para visitantes de establecimientos que pronostica los tiempos de menor concurrencia, minimizando el riesgo de exposición al SARS-CoV-2, utilizando Ionic, Google Maps
+                                API y BestTime.app.
                             </p>
                             <a href="https://github.com/muskops/covid-previene-19" target="_blank"><i class="fas fa-file-code"></i></a>
                         </div>
