Agregado de más logros

--- a/index.html
+++ b/index.html
@@ -287,10 +287,16 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="13"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="14"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="15"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="16"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-30 border" src="img/logros/reconocimientotec.png" alt="Reconocimiento ITSM">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-30 border" src="img/logros/constanciaverano.png" alt="Reconocimiento CBTis 15">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-50 border" src="img/logros/constanciatamcoder.jpg" alt="Reconocimiento CBTis 15">
@@ -302,34 +308,40 @@
                     <img class="d-block w-30 border" src="img/logros/reconocimientocbtis.png" alt="Reconocimiento CBTis 15">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/acreditacionms.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/acreditacionms.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/constanciahbuild1.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/constanciahbuild1.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/constanciahbuild.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/constanciahbuild.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/constanciainglesparatodos.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/constanciainglesparatodos.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/certificadoAngular5.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/certificadoAngular5.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/certificadohtml.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/certificadohtml.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/certificadosqludemy.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/certificadosqludemy.png" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/congreso.jpg" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/cursoudemybootsrap.jpg" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/constanciaofimatica.jpg" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/cursoudemyjs.jpg" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-50 border" src="img/logros/hourcode.png" alt="Acreditación Microsoft">
+                    <img class="d-block w-50 border" src="img/logros/congreso.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/constanciaofimatica.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-50 border" src="img/logros/hourcode.png" alt="">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
