Agregado de otro proyecto

--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
                     <div class="sm-col">
+                        <img class="sm-image" src="/img/proyectos/RosetaLogo.png" alt="Bugoff">
+                        <div class="sm-description">
+                            <h6>Roseta</h6>
+                            <p class="text-justify">Landing Page de productos Roseta los cuales fueron productos en un proyecto universitario para el emprendimiento realizada en HTML y CSS.
+                            </p>
+                            <a href="https://github.com/muskops/Roseta" target="_blank"><i class="fas fa-file-code"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 sm-col-prin">
+                    <div class="sm-col">
                         <img class="sm-image" src="/img/proyectos/adamant.png" alt="Adamant">
                         <div class="sm-description">
                             <h6>Adamant</h6>
